<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test_level">Тестовый</string>
    <string name="choose_level_text">Выберите уровень:</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Сложный</string>
    <string name="start_logo">Start logo</string>
    <string name="tv_title_text">Состав числа</string>
    <string name="guide_text">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в дроугом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7.</string>
    <string name="button_accept_text">ПОНЯТНО</string>
    <string name="question_mark">\?</string>
    <string name="progress_answer">Правильных ответов %s (минимум %s)</string>
    <string name="game_over">Game Over</string>
    <string name="button_retry_text">Попробовать снова</string>
    <string name="tv_required_answer_text">Необходимое количество правильных ответов: %s</string>
    <string name="tv_score_answer_text">Ваш счет: %s</string>
    <string name="tv_required_perc_text">Необходимый процент правильных ответов: %s</string>
    <string name="tv_score_perc_text">Процент правильных ответов: %s</string>
</resources>