<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.ChooseLevelFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/choose_level_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_level_test"
        style="@style/Margin16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/test_level" />

    <Button
        android:id="@+id/button_level_easy"
        style="@style/Margin16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#8BC34A"
        android:text="@string/easy_level" />

    <Button
        android:id="@+id/button_level_normal"
        style="@style/Margin16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:text="@string/normal_level" />

    <Button
        android:id="@+id/button_level_hard"
        style="@style/Margin16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#F44336"
        android:text="@string/hard_level" />


</LinearLayout>