<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.example.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="48dp"
            app:setImage="@{gameResult.winner}"
            android:contentDescription="@string/game_over"
            app:layout_constraintBottom_toTopOf="@+id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/happy_win_smile" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:minEnAns="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            tools:text="@string/tv_required_answer_text" />

        <TextView
            android:id="@+id/tv_score_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:Score="@{gameResult.countOfRightAnswers}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
            tools:text="@string/tv_score_answer_text" />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:minEnPerc="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
            app:layout_constraintTop_toBottomOf="@+id/tv_score_answers"
            tools:text="@string/tv_required_perc_text" />

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:ScorePerc="@{gameResult}"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/button_retry"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage"
            tools:text="@string/tv_score_perc_text" />

        <Button
            android:id="@+id/button_retry"
            style="@style/Margin16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_retry_text"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>